--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
 section.hero {
   @apply grid;
   grid-template-columns: 0.4fr 0.6fr;
@@ -13,4 +19,25 @@ h1.title {
   color: blue;
   margin-top: 30px;
   text-align: center;
+}
+
+input[type="email"],
+input[type="password"],
+input[type="text"] {
+  @apply block w-full my-4 rounded-xl;
+  @apply border p-2 border-gray-300 bg-gray-200;
+}
+
+button {
+  @apply block w-full text-gray-700 font-semibold;
+  @apply border border-b-gray-300 rounded-xl px-6 py-2;
+}
+
+button[type="submit"],
+.submit {
+  @apply border-0 bg-primary text-white;
+}
+
+form {
+  width: 320px;
 }
