--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,12 @@ input[type="text"] {
   @apply border p-2 border-gray-300 bg-gray-200;
 }
 
+input[type="email"]:disabled,
+input[type="password"]:disabled,
+input[type="text"]:disabled {
+@apply bg-gray-700;
+}
+
 button {
   @apply block w-full text-gray-700 font-semibold;
   @apply border border-b-gray-300 rounded-xl px-6 py-2;
