--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ input[type="text"] {
 input[type="email"]:disabled,
 input[type="password"]:disabled,
 input[type="text"]:disabled {
-@apply bg-gray-300;
+  @apply bg-gray-300;
 }
 
 button {
@@ -43,11 +43,10 @@ button[type="submit"],
 .submit {
   @apply border-0 bg-primary text-white;
 }
-button[type="submit"],
+button[type="submit"]:disabled,
 .submit {
   @apply cursor-not-allowed bg-red-400;
 }
-
 
 form {
   width: 320px;
