--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ input[type="text"] {
 input[type="email"]:disabled,
 input[type="password"]:disabled,
 input[type="text"]:disabled {
-  @apply bg-gray-300;
+  @apply bg-gray-300 border-0 cursor-not-allowed text-gray-300;
 }
 
 button {
