--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,15 +23,25 @@ h1.title {
 
 input[type="email"],
 input[type="password"],
-input[type="text"] {
-  @apply block w-full my-4 rounded-xl;
+input[type="text"],
+input[type="tel"] {
+  @apply block w-full mb-2 rounded-xl;
   @apply border p-2 border-gray-300 bg-gray-200;
 }
 
 input[type="email"]:disabled,
 input[type="password"]:disabled,
-input[type="text"]:disabled {
+input[type="text"]:disabled,
+input[type="tel"]:disabled  {
   @apply bg-gray-300 border-0 cursor-not-allowed text-gray-500;
+}
+
+label {
+  @apply text-gray-500 text-sm leading-tight;
+}
+
+label + input {
+margin-top: -2px;
 }
 
 button {
