--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,7 @@ button {
 
 button[type="submit"],
 .submit {
-  @apply border-0 bg-primary text-white;
+  @apply border-primary bg-primary text-white;
 }
 button[type="submit"]:disabled,
 .submit {
@@ -60,4 +60,12 @@ button[type="submit"]:disabled,
 
 form {
   width: 320px;
+}
+
+div.tabs > * {
+  @apply bg-gray text-gray-700 rounded-full py-2 px-4;
+}
+
+div.tabs > *.active {
+  @apply bg-primary text-white;
 }
